<resources>
    <string name="app_name">MyListNewsNavComp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="judul_news">Judul News</string>
    <string name="tanggal">Tanggal</string>
    <string name="author">Author</string>
    <string name="news">News</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_register">Belum punya akun? Register</string>
    <string name="register">Register</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_konfirmasi_password">Masukkan Konfirmasi Password</string>
    <string name="tunggu_sebentar">Tunggu Sebentar ...</string>
</resources>