<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_news"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_news"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold"
                />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:backgroundTint="@color/black"
                android:layout_marginVertical="5dp"/>

            <TextView
                android:id="@+id/tv_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:textSize="20sp"
                tools:targetApi="o" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>