<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >
        <TextView
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="35sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_baseline_newspaper_24" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/input_username"
            style="@style/InputTextStyle"
            android:background="@drawable/style_edit_text"
            android:hint="@string/masukkan_username"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/input_password"
            style="@style/InputTextStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonStyle"
            android:text="@string/login" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/belum_punya_akun_register"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>